rgbds-0.6.1/test/asm/incbin-end-0.err
error: incbin-end-0.asm(1):
    Cannot output data outside of a SECTION
error: Assembly aborted (1 error)!
