rgbds-0.6.1/test/asm/incbin-end-0.asm
INCBIN "data.bin", 123, 0
